unpackaged/main/default/objects/Industry__c/fields/Default_NAF__c.field-meta.xml
<CustomField>
    <fullName>Default_NAF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default NAF</label>
    <type>Checkbox</type>
</CustomField>