unpackaged/main/default/objects/Industry__c/fields/Industry_Label__c.field-meta.xml
<CustomField>
    <fullName>Industry_Label__c</fullName>
    <label>Industry Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>