unpackaged/main/default/objects/Industry__c/fields/NAF_3__c.field-meta.xml
<CustomField>
    <fullName>NAF_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAF 3</label>
    <referenceTo>NAF_3__c</referenceTo>
    <relationshipLabel>Industries</relationshipLabel>
    <relationshipName>Industries</relationshipName>
    <type>Lookup</type>
</CustomField>