unpackaged/main/default/objects/Industry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Industry_Label__c</columns>
    <columns>Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>