unpackaged/main/default/objects/Industry__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Industry_Label__c</columns>
    <columns>Industry__c</columns>
    <columns>NAF_3__c</columns>
    <columns>Default_NAF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>